--- a/KLS_WEB/KLS_WEB/Views/Travels/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/Index.cshtml
@@ -15,15 +15,21 @@
         </div>
 
         <div class="p-4 shadow bg-white">
-            <div class="col-6 d-flex flex-row">
-                <div class="w-100">
-                    <label for="editcliente" class="form-label size-12 font-weight-bold float-left">FILTRAR POR ESTATUS</label>
-                    <select class="form-control form-control-sm cliente" style="width: 100%;" id="filtro" name="filtro[]" multiple="multiple" onchange="DT(null, this)"></select>
+            <div class="row">
+                <div class="col-6 d-flex flex-row">
+                    <div class="w-100">
+                        <label for="editcliente" class="form-label size-12 font-weight-bold float-left">FILTRAR POR ESTATUS</label>
+                        <select class="form-control form-control-sm cliente" style="width: 100%;" id="filtro" name="filtro[]" multiple="multiple" onchange="DT(null, this)"></select>
+                    </div>
+                    <div class="w-50">
+                        <input type="search" class="form-control my-4 ml-3" style="background-color:#EDECEC; height: 2.3rem;" placeholder="Buscar" onkeyup="DT(this.value)">
+                    </div>
                 </div>
-                <div class="w-50">
-                    <input type="search" class="form-control my-4 ml-3" style="background-color:#EDECEC; height: 2.3rem;" placeholder="Buscar" onkeyup="DT(this.value)">
+                <div class="col-6 d-flex flex-row">
+                    <div class="my-auto w-100 justify-content-end">
+                        <a href="/Travels/AddEdit/0/0" class="btn btn-sm btn-outline-secondary float-right"><span class="material-icons">add</span></a>
+                    </div>
                 </div>
-
             </div>
             <table id="table" class="table table-striped table-bordered display table-hover table-viajes text-uppercase" width="100%">
                 <thead>
