*Route format bugfix

--- a/KLS_WEB/KLS_WEB/Views/Travels/_Section.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/_Section.cshtml
@@ -189,6 +189,7 @@
         } else {
             $('#Section_RutaId').empty();
             customerParams.prop('disabled', false).show();
+            $('#Section_Cl_Has_OrigenId').trigger('change');
         }
     });
 
