*url ruta label to upper case

--- a/KLS_WEB/KLS_WEB/Views/Travels/_Section.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/_Section.cshtml
@@ -104,7 +104,7 @@
                 <select asp-for="Section.RutaId" asp-items="Model.Selects.Routes" class="form-select" style="width: 100%;" onchange="GetRoutePrice(this.value)"></select>
             </div>
             <div class="col-6">
-                <label class="form-label">URL ruta</label> <br />
+                <label class="form-label">URL RUTA</label> <br />
                 <a id="routeURL" class="text-primary text-uppercase" href="javascript:void(0)">SIN URL CONFIGURADA</a>
             </div>
             @*<div class="col-6">
