*Hide password recover

--- a/KLS_WEB/KLS_WEB/Views/Login/Login.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Login/Login.cshtml
@@ -63,9 +63,9 @@
                     }
                 }
             </div>
-            <div class="foot">
+            @*<div class="foot">
                 <a asp-controller="Login" asp-action="ResetPassword" class="w-100 btn-link text-center d-block pt-3 pb-3 c-pointer size-12">OLVIDÉ MI CONTRASEÑA</a>
-            </div>
+            </div>*@
         </div>
     </div>
 </body>
