--- a/KLS_WEB/KLS_WEB/Views/Travels/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/Index.cshtml
@@ -19,7 +19,7 @@
                 <div class="col-6 d-flex flex-row">
                     <div class="w-100">
                         <label for="editcliente" class="form-label size-12 font-weight-bold float-left">FILTRAR POR ESTATUS</label>
-                        <select class="form-control form-control-sm cliente" style="width: 100%;" id="filtro" name="filtro[]" multiple="multiple" onchange="DT(null, this)"></select>
+                        <select class="form-control form-control-sm cliente" style="width: 100%;" id="filtro" name="filtro[]" multiple="multiple" onchange="DT(null, this)" data-selected-text-format="count" data-live-search="true"></select>
                     </div>
                     <div class="w-50">
                         <input type="search" class="form-control my-4 ml-3" style="background-color:#EDECEC; height: 2.3rem;" placeholder="Buscar" onkeyup="DT(this.value)">
@@ -52,10 +52,15 @@
 </div>
 
 @section Scripts{
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
+    <!-- (Optional) Latest compiled and minified JavaScript translation files -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/i18n/defaults-es_ES.min.js"></script>
     <script>
         $(document).ready(function (event) {
             DT();
-            dSelect('filtro');
             getSubstatus();
         });
 
@@ -66,7 +71,7 @@
                 let filter = '';
                 data && data.map(({ id, name, status }) => {
                     filter += `<option value="${id}">${status.name} - ${name}</option>`;
-                }), $('#filtro').html(filter)
+                }), $('#filtro').html(filter).selectpicker()
             } catch (error) {
                 console.error(error)
             }
