--- a/KLS_WEB/KLS_WEB/Views/Travels/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/Index.cshtml
@@ -22,7 +22,7 @@
                         <select class="form-control form-control-sm cliente" style="width: 100%;" id="filtro" name="filtro[]" multiple="multiple" onchange="DT(null, this)" data-selected-text-format="count" data-live-search="true"></select>
                     </div>
                     <div class="w-50">
-                        <input type="search" class="form-control my-4 ml-3" style="background-color:#EDECEC; height: 2.3rem;" placeholder="Buscar" onkeyup="DT(this.value)">
+                        <input type="search" class="form-control my-4 ml-3" style="background-color:#EDECEC; height: 32px;" placeholder="Buscar" onkeyup="DT(this.value)">
                     </div>
                 </div>
                 <div class="col-6 d-flex flex-row">
